testsuite/tests/checks/abort_statements/test.out
abort_statements.adb:10:7: error: abort_statements - rule violation
10 |       abort T; -- FLAG
   |       ^^^^^^^^ 

